@@ -1,3 +1,6 @@
+2008-02-11 Brian Matherly <brian@gramps-project.org>
+	* src/Editors/_EditNote.py: Fix saving notes without marker being set.
+
 2008-02-11 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/plugins/MediaManager.py: conversion functions of path
 	* src/Utils.py: general methods to convert abs to rel
